search bar function

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ a {
 }
 
 /* 0c090a, a71d31, E0CA3C */
+/* #B74068 */
+
+.search-bar {
+  border: none;
+  outline: none;
+  width: 175px; 
+  overflow: visible;
+}
+
+.search-bar::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+@media screen and (min-width: 600px) {
+  .search-bar {
+    width: 300px;
+  }
+}
