--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,40 @@ a {
   -webkit-appearance: none;
 }
 
+.sidebar-btn {
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  cursor: pointer;
+  outline: none;
+  border: none;
+
+  padding: 8px 12px;
+  margin: 3px 0px;
+  border-radius: 20px;
+
+  background-color: transparent;
+  color: #fff;
+
+  transition: all 0.2s ease;
+}
+
+.sidebar-btn:hover {
+  background-color: rgba(255, 255, 255, .15);
+}
+
+.selected {
+  text-transform: capitalize;
+  font-weight: bolder;
+  background-color: #FF0000;
+  color: #0c090a;
+}
+
+.selected:hover {
+  background-color: #FF0000;
+}
+
 @media screen and (min-width: 900px) {
   .logo {
     display: block;
