--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,48 @@ a {
   -webkit-appearance: none;
 }
 
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 95vh;
+  background-color: #0c090a;
+  border-radius: 0px 0px 25px 0px;
+  /* -ms-overflow-style: none; 
+  scrollbar-width: none;  */
+}
+
+.sidebar-scroll {
+  overflow-Y: auto;
+  padding-right: 6px;
+}
+.categories-scroll {
+  overflow-X: auto;
+  padding-bottom: 4px;
+}
+.sidebar-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+.categories-scroll::-webkit-scrollbar {
+  height: 4px;
+}
+.sidebar-scroll::-webkit-scrollbar-track,
+.categories-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+.sidebar-scroll::-webkit-scrollbar-thumb,.categories-scroll::-webkit-scrollbar-thumb {
+  background: #a71d31;
+  border-radius: 10px;
+  transition: background .3s ease;
+}
+.sidebar-scroll::-webkit-scrollbar-thumb:hover {
+  background: #f00;
+}
+.categories-scroll::-webkit-scrollbar-thumb:hover {
+  background: #f00;
+}
+
 .sidebar-btn {
   text-transform: capitalize;
   display: flex;
@@ -57,12 +99,12 @@ a {
 .selected {
   text-transform: capitalize;
   font-weight: bolder;
-  background-color: #FF0000;
+  background-color: #a71d31;
   color: #0c090a;
 }
 
 .selected:hover {
-  background-color: #FF0000;
+  background-color: #F00;
 }
 
 @media screen and (min-width: 900px) {
