--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ a {
 
 .sidebar {
   position: absolute;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 250px;
@@ -116,6 +117,26 @@ a {
   width: 100%;
 }
 
+.page-logo {
+  height: 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .search-bar {
+    width: 300px;
+  }
+  .page-logo {
+    height: 50px;
+  }
+  
+}
+
+@media screen and (min-width: 800px) {
+  .page-logo {
+    height: 60px;
+  }
+}
+
 @media screen and (min-width: 900px) {
   .logo {
     display: block;
@@ -127,15 +148,7 @@ a {
     grid-template-columns: 1fr !important;
     max-width: 320px !important;
   }
-}
-
-@media screen and (min-width: 800px) {
-  
-}
-
-@media screen and (min-width: 600px) {
-  .search-bar {
-    width: 300px;
+  .page-logo {
+    height: 70px;
   }
-  
 }
