--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Fira Sans', sans-serif;
+  background-color: '#0c090a'
 }
 
 a {
   text-decoration: none;
+  color: #fff;
 }
 
 /* 0c090a, a71d31, E0CA3C */
@@ -52,25 +54,32 @@ a {
   overflow-X: auto;
   padding-bottom: 4px;
 }
+
+::-webkit-scrollbar,
 .sidebar-scroll::-webkit-scrollbar,
 .feed-scroll::-webkit-scrollbar  {
   width: 5px;
 }
+
 .categories-scroll::-webkit-scrollbar {
   height: 4px;
 }
+
+::-webkit-scrollbar-track,
 .sidebar-scroll::-webkit-scrollbar-track,
 .categories-scroll::-webkit-scrollbar-track,
 .feed-scroll::-webkit-scrollbar-track {
-  background: transparent;
+  background: #0c090a;
 }
+::-webkit-scrollbar-thumb,
 .sidebar-scroll::-webkit-scrollbar-thumb,
 .categories-scroll::-webkit-scrollbar-thumb,
 .feed-scroll::-webkit-scrollbar-thumb {
   background: #a71d31;
   border-radius: 10px;
-  transition: background .3s ease;
+  
 }
+::-webkit-scrollbar-thumb:hover,
 .sidebar-scroll::-webkit-scrollbar-thumb:hover,
 .categories-scroll::-webkit-scrollbar-thumb:hover,
 .feed-scroll::-webkit-scrollbar-thumb:hover {
